# mountains

./: .gitignore  README.md
mountains/: download_db_from_server.sh  download_media_from_server.sh  manage.py  pyproject.toml
mountains/activity/: models.py  serializers.py  views.py
mountains/activity/migrations/: 0001_initial.py  0002_alter_activity_action.py
mountains/events/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
mountains/events/migrations/: 0001_initial.py  0002_initial.py  0003_alter_event_attendees.py  0003_event_show_popup.py  0004_manual_event_attendees.py  0005_auto_20221109_1022.py  0006_alter_event_max_attendees.py  0007_event_event_type.py  0008_attendinguser_is_driving.py  0009_event_members_only.py  0010_event_signup_open.py  0011_event_is_deleted.py  0012_attendinguser_modified_date.py  0013_attendinguser_list_join_date.py  0014_auto_20230619_1037.py  0015_event_signup_open_date.py  0016_alter_event_signup_open_date.py  0016_event_price_id.py  0017_alter_event_event_type.py  0018_alter_event_event_type.py  0019_event_event_end_date.py
mountains/kit/: admin.py  apps.py  models.py  serializers.py  views.py
mountains/members/: admin.py  apps.py  auth.py  discord.py  models.py  permissions.py  serializers.py  signals.py  views.py
mountains/mountains/: asgi.py  settings.py  urls.py  wsgi.py
mountains/mountains/settings/: base.py  (+3 more)
mountains/payments/: models.py  serializers.py  views.py
mountains/photos/: admin.py  models.py  serializers.py  views.py
mountains/reports/: models.py  serializers.py  views.py
mountains/social/: admin.py  models.py  serializers.py  views.py
(+170 files in other folders)
