[tool.poetry]
name = "mountains"
version = "0.1.0"
description = ""
authors = ["Mark Waddoups <mwaddoups@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <4"
Django = "^3.2"
django-rest-framework = "^0.1.0"
django-cors-headers = "^3.10.1"
drfpasswordless = "^1.5.7"
Pillow = "^9.0.0"
django-resized = "^0.3.11"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"
django-anymail = {extras = ["mailgun"], version = "^8.4"}
urllib3 = "^1.26.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
